Format: revise many classes slightly, such as declaring variables as final.